<resources>
    <string-array name="menuOptions">
        <item>VG Home</item>
        <item>Categories</item>
        <item>Projects</item>
        <item>My Members</item>
        <item>VG Members</item>
        <item>Members Chat</item>
        <item>Settings</item>
        <item>Switch to HMG</item>
        <item>Change Password</item>
        <item>Profile</item>
    </string-array>
    <string-array name="shortcutOptions">
        <item>Notifications</item>
        <item>Categories</item>
        <item>My Members</item>
        <item>VG Members</item>
        <item>Members Chat</item>
        <item>Settings</item>
        <item>Switch to HMG</item>
        <item>Chats</item>
        <item>Projects</item>
        <item>Group Chat</item>
        <item>HMG Members</item>
        <item>Profile</item>
    </string-array>
    <string-array name="menuOptionsHMG">
        <item>HMG Home</item>
        <item>Categories</item>
        <item>Deals</item>
        <item>My Members</item>
        <item>HMG Members</item>
        <item>Members Chat</item>
        <item>Settings</item>
        <item>Switch to VG</item>
        <item>Change Password</item>
        <item>Profile</item>
    </string-array>
    <string-array name="shortcutOptionsHMG">
        <item>Notifications</item>
        <item>Categories</item>
        <item>My Members</item>
        <item>HMG Members</item>
        <item>Members Chat</item>
        <item>Settings</item>
        <item>Switch to VG</item>
        <item>Chats</item>
        <item>Deals</item>
        <item>Group Chat</item>
        <item>VG Members</item>
        <item>Profile</item>
    </string-array>
    <string-array name="legals">
        <item>Direct Broker</item>
        <item>Official commissioner, owner and decision maker</item>
        <item>Broker of several brokers</item>
    </string-array>
    <string-array name="period">
        <item>30 Days</item>
        <item>60 Days</item>
        <item>90 Days</item>
    </string-array>
    <string name="category">Categories</string>
    <string-array name="categories">
        <item>All</item>
        <item>Agriculture</item>
        <item>Mining</item>
        <item>Construction</item>
        <item>Wholesale and retail trade</item>
        <item>Storage and Transportation</item>
        <item>Accommodation and Restaurants</item>
        <item>Technology &amp; Communications</item>
        <item>Final and Insurance</item>
        <item>Real Estate</item>
        <item>Profession and Scientific</item>
        <item>Logistic support</item>
        <item>Administrative Services</item>
        <item>Education</item>
        <item>Medicine and Health</item>
        <item>Arts and entertainment</item>
        <item>Exhibitions and conferences</item>
        <item>Advertising and publicity</item>
        <item>Cars</item>
        <item>Furniture and Furnishing</item>
        <item>Hygiene</item>
    </string-array>
    <string-array name="ProjectStatus">
        <item>All Status</item>
        <item>Uncompleted</item>
        <item>Completed</item>
    </string-array>
    <string name="app_name">VGINV</string>
    <string name="usernameHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="oldPasswordHint">Old Password</string>
    <string name="newPasswordHint">New Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="login">Login</string>
    <string name="changePassword">Change Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="lgout">Logout</string>
    <string name="add_new_project">Add New Project</string>
    <string name="clear_notifications">Clear Notifications</string>
    <string name="projects">Projects</string>
    <string name="Total_Investment">Total Investment</string>
    <string name="Total_Investment_SAR">Total Investment SAR</string>
    <string name="Favorites">Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="inbox">Inbox</string>
    <string name="project">Projects</string>
    <string name="news">News</string>
    <string name="image_des">Image</string>
    <string name="image_des_ic_share">Share</string>
    <string name="updated_just_now">Updated just now</string>
    <string name="share_article">Share Article</string>
    <string name="the_guardian">theguardian</string>
    <string name="world">world</string>
    <string name="science">science</string>
    <string name="sport">sport</string>
    <string name="environment">environment</string>
    <string name="society">society</string>
    <string name="fashion">fashion</string>
    <string name="business">business</string>
    <string name="culture">culture</string>
    <string name="hint_num_of_items">Between 1 and 50</string>
    <string name="settings_number_of_items_label">Number of Items</string>
    <string name="settings_number_of_items_key" translatable="false">number_of_items</string>
    <string name="settings_number_of_items_default" translatable="false">10</string>
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
    <string name="settings_from_date_label">From Date</string>
    <string name="settings_from_date_key" translatable="false">from date</string>
    <string name="settings_from_date_default" translatable="false">2010-01-01</string>
    <string name="settings_order_date_label">Order Date</string>
    <string name="settings_order_date_key" translatable="false">order date</string>
    <string name="settings_order_date_default" translatable="false">@string/settings_order_date_published_value</string>
    <string name="settings_order_date_published_label">Published</string>
    <string name="settings_order_date_published_value" translatable="false">published</string>
    <string name="settings_order_date_newspaper_edition_label">Newspaper Edition</string>
    <string name="settings_order_date_newspaper_edition_value" translatable="false">newspaper-edition</string>
    <string name="settings_order_date_last_modified_label">Last Modified</string>
    <string name="settings_order_date_last_modified_value" translatable="false">last-modified</string>
    <string name="settings_color_label">Color Theme</string>
    <string name="settings_color_key">color theme</string>
    <string name="settings_color_default">white</string>
    <string name="settings_color_white_label">White</string>
    <string name="settings_color_white_value">white</string>
    <string name="settings_color_sky_blue_label">Sky Blue</string>
    <string name="settings_color_sky_blue_value">sky blue</string>
    <string name="settings_color_dark_blue_label">Dark Blue</string>
    <string name="settings_color_dark_blue_value">dark blue</string>
    <string name="settings_color_violet_label">Violet</string>
    <string name="settings_color_violet_value">violet</string>
    <string name="settings_color_light_green_label">Light Green</string>
    <string name="settings_color_light_green_value">light green</string>
    <string name="settings_color_green_label">Green</string>
    <string name="settings_color_green_value">green</string>
    <string name="settings_text_size_label">Text Size</string>
    <string name="settings_text_size_key" translatable="false">text size</string>
    <string name="settings_text_size_default" translatable="false">@string/settings_text_size_medium_value</string>
    <string name="settings_text_size_small_label">Small</string>
    <string name="settings_text_size_small_value" translatable="false">small</string>
    <string name="settings_text_size_medium_label">Medium</string>
    <string name="settings_text_size_medium_value" translatable="false">medium</string>
    <string name="settings_text_size_large_label">Large</string>
    <string name="settings_text_size_large_value" translatable="false">large</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_title_default">Default view</string>
    <string name="sample_subtitle_default">Dialogs and messages with default style</string>
    <string name="sample_title_attrs">Styled view</string>
    <string name="sample_subtitle_attrs">Styled components using embedded attributes</string>
    <string name="sample_title_layout">Custom layout</string>
    <string name="sample_subtitle_layout">Custom layouts to change default views position</string>
    <string name="sample_title_holder">Custom view holder</string>
    <string name="sample_subtitle_holder">Custom view holder to extend default behaviour for a new features</string>
    <string name="sample_title_custom_content">Custom content type</string>
    <string name="sample_subtitle_custom_content">Custom message content on the example of voice message</string>
    <string name="hint_enter_a_message">Type a message…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>
    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>
    <string name="start_typing_status">Start typing</string>
    <string name="stop_typing_status">Stop typing</string>
    <string name="sample_title">ChatKit for Android</string>
    <string name="view">View</string>
    <string name="hmgvgerror">You cannot view this user profile</string>
    <string name="hmgvgchaterror">You cannot chat with this user</string>
    <string name="friendRequestError">Something went wrong. Please try again later</string>
    <string name="profile">Profile</string>
    <string name="friendrequest">New Friend Request</string>
    <string name="friendRequestDetails">Sent you friend request</string>
    <string name="fieldRequired">All fields are required</string>
    <string name="passwordMatchError">Password Does not match</string>
    <string name="passwordChangeSuccesss">Password has been changed successfully</string>
    <string name="profileChangeSuccesss">Profile has been updated successfully</string>
    <string name="passwordChangeError">There is an error changing password, Try again later</string>
    <string name="profileChangeError">There is an error updating profile, Try again later</string>
    <string name="editProfile">Edit Profile</string>
    <string name="AddNewProject">Add New Project</string>
    <string name="title">Choose appropriate title for your projects*</string>
    <string name="budget">Total Budget</string>
    <string name="budget_SAR">Total Budget SAR</string>
    <string name="submit">Submit</string>
    <string name="addImage">Add Image</string>
    <string name="addFile">Add Video</string>
    <string name="description">Description</string>
    <string name="LegalStatusProvider">Legal status of the project provider</string>
    <string name="Period">Period</string>
    <string name="Country">Project Country</string>
    <string name="City">Project City</string>
    <string name="search_here">Search Here</string>
    <string name="no_projects">No projects to show</string>
    <string name="Attachments">Attachments</string>
    <string name="ProjectTitle">Title (Special Characters are not allowed)"</string>
</resources>