<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <Button
        android:id="@+id/addNewProject"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:background="@drawable/round_corner_button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/add_new_project"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/projectHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/project"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_here" />

    <com.techno.vginv.Views.EmptyRecyclerView
        android:id="@+id/projectsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <TextView
        android:id="@+id/emptyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/no_projects"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:visibility="gone"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

</LinearLayout>